# canon

./: CLAUDE.md  Cargo.toml  README.md
canonargs/: Cargo.toml
canonargs/src/: main.rs
scripts/: exif-worklist.sh  hash-worklist.sh
src/: apply.rs  cluster.rs  coverage.rs  db.rs  exclude.rs  facts.rs  filter.rs  import_facts.rs  ls.rs  main.rs  scan.rs  worklist.rs
